--- a/docs/notes/20.05.2022.md
+++ b/docs/notes/20.05.2022.md
@@ -1,4 +1,4 @@
-# Трансляция 20 мая 2020 года 18:00
+# Трансляция 20 мая 2020 года 18:00 - Арен Елчинян
 
 Сегодня первая публичная прямая трансляция за долгое время.
 Заметки на трансляции:
