Починил баг в TSS

--- a/docs/notes/20.05.2022.md
+++ b/docs/notes/20.05.2022.md
@@ -11,5 +11,5 @@
 - Графический интерфейс
 - Туториалы
 - Возвращение на ютуб
-- Видео: Устройство ос, тетирование
+- Видео: Устройство ос, тестирование
 - Подготовить презентацию и видео о проекте
